--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1" />
-<title>untitled</title>
+<title>Pdflatex</title>
 </head>
 <body>
 <div id="root"></div>
